<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/h1Login"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_above="@+id/emailInput"
        android:layout_marginBottom="-126dp"
        android:layout_toStartOf="@+id/textView"
        android:text="@string/forEmail"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/mail"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:hint="@string/placeHolderEmail"
        tools:ignore="LabelFor"
        android:paddingTop="15dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="197dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:hint="@string/forPassword" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="228dp"
        android:autofillHints=""
        android:drawableStart="@drawable/lock_vector"
        android:drawablePadding="10sp"
        android:ems="10"
        android:inputType="textPassword"
        tools:text="@string/placeholderPassword"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/register"/>


</RelativeLayout>