<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="@+id/scrollView2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/txtNameRegister"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="22dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/Phone"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/txtPhoneRegister"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/Phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forEmail"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/txtEmailRegister"
                android:layout_width="250dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/placeHolderEmail"
                android:autofillHints=""
                tools:ignore="LabelFor"
                />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/forPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtPasswordRegister"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/placeholderPassword"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/forRepeatPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtReapeatPasswordRegister"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/placeholderPassword"
                tools:ignore="LabelFor" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/agreedWithPrivacy"
                android:background="@color/softGray"
                android:textColor="@color/black"
                android:buttonTint="@color/red"
                />

            <Button
                android:id="@+id/btnRegisterRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:hint="@string/register"
                android:textColor="@color/black"
                android:background="@drawable/state"
                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>