<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/red"
    android:id="@+id/specificBackground">


    <ImageView
        android:id="@+id/imgSpecificCar"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/the_you_clicked_on"
        tools:ignore="InefficientWeight"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtCarNameSpecific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/carpicture"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtMerkSpecific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/carpicture"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtCarBuildYearSpecific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/carpicture"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtCarDescriptionSpecific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/carpicture"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btnLikeSpecific"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/like_this_car"
        />
</LinearLayout>